@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="de" xml:lang="de">
 <head>
-<!-- 2023-11-13 Mo 19:24 -->
+<!-- 2023-12-04 Mo 19:53 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Textsatz mit TeX/LaTeX</title>
@@ -31,9 +31,9 @@ software is still in active use, essentially the same as it was
 </p>
 </blockquote>
 
-<div id="outline-container-org1b8f7fb" class="outline-2">
-<h2 id="org1b8f7fb">Was ist TeX? Was ist LaTeX?</h2>
-<div class="outline-text-2" id="text-org1b8f7fb">
+<div id="outline-container-org5c82ec2" class="outline-2">
+<h2 id="org5c82ec2">Was ist TeX? Was ist LaTeX?</h2>
+<div class="outline-text-2" id="text-org5c82ec2">
 <p>
 Auf der Website des <i>LaTeX Project</i> wird LaTeX (sprich: lah-tech)
 <a href="https://www.latex-project.org/about/">folgendermaßen</a> beschrieben:
@@ -127,9 +127,9 @@ Grafikdesign</li>
 </div>
 </div>
 
-<div id="outline-container-orgb5049f8" class="outline-2">
-<h2 id="orgb5049f8">CTAN</h2>
-<div class="outline-text-2" id="text-orgb5049f8">
+<div id="outline-container-orgead72d6" class="outline-2">
+<h2 id="orgead72d6">CTAN</h2>
+<div class="outline-text-2" id="text-orgead72d6">
 <p>
 Das <i>Comprehensive TeX Archive Network</i> <a href="https://ctan.org/">CTAN</a> (sprich: zeh-tan) ist ein
 Netzwerk von Servern, über das TeX, LaTeX und die ergänzende Software
@@ -148,9 +148,9 @@ noch auf dem Portal fortgeführt wird.
 </div>
 </div>
 
-<div id="outline-container-orgb8e82cd" class="outline-2">
-<h2 id="orgb8e82cd">Installation</h2>
-<div class="outline-text-2" id="text-orgb8e82cd">
+<div id="outline-container-org3724032" class="outline-2">
+<h2 id="org3724032">Installation</h2>
+<div class="outline-text-2" id="text-org3724032">
 <p>
 (La)TeX kann auf allen Plattformen eingesetzt werden. Benötigt werden
 eine TeX-Distribution – <a href="https://www.tug.org/texlive/">TeX&nbsp;Live</a> bzw. dessen Variante <a href="https://www.tug.org/mactex/">MacTeX</a>
@@ -218,9 +218,9 @@ WYSIWYG? preview-latex unter Emacs und andere Ansätz</a>e, in: DTK
 </div>
 </div>
 
-<div id="outline-container-orgfc93002" class="outline-2">
-<h2 id="orgfc93002">Online-Ressourcen</h2>
-<div class="outline-text-2" id="text-orgfc93002">
+<div id="outline-container-orgf5fece9" class="outline-2">
+<h2 id="orgf5fece9">Online-Ressourcen</h2>
+<div class="outline-text-2" id="text-orgf5fece9">
 <p>
 Unter den Texten, die online verfügbar sind, ist die Einführung in
 LaTeX, die das <i>LaTeX Project</i> bereitstellt, grundlegend. Sie ist in
@@ -258,7 +258,10 @@ die man sonst schwer in Anleitungen und Büchern findet und die man
 sich ohne tieferes Hintergrundwissen auch kaum erschließen kann. Seit
 Juni 2018 wird die englische FAQ unter dem Titel <i>The TeX Frequently
 Asked Question List</i> von David Carlisle, Stefan Kottwitz, Karl Berry,
-Joseph Wright und vielen anderen <a href="https://github.com/texfaq/texfaq.github.io">auf GitHub fortgeführt</a>.
+Joseph Wright und vielen anderen <a href="https://github.com/texfaq/texfaq.github.io">auf GitHub fortgeführt</a>. Eine
+<a href="https://faq.gutenberg-asso.fr/">französischsprachige FAQ</a> mit ähnlichem Ansatz gibt es von der
+französischen Benutzergruppe GUTenberg. Sie wird über eine
+vereinseigene Gitlab-Instanz gepflegt.
 </p>
 
 <p>
@@ -312,9 +315,9 @@ No.&nbsp;1, pp.&nbsp;68&#x2013;71.</li>
 </div>
 </div>
 
-<div id="outline-container-orgdd55879" class="outline-2">
-<h2 id="orgdd55879">Wissenschaftliche Arbeiten mit LaTeX schreiben</h2>
-<div class="outline-text-2" id="text-orgdd55879">
+<div id="outline-container-orgcf98bd7" class="outline-2">
+<h2 id="orgcf98bd7">Wissenschaftliche Arbeiten mit LaTeX schreiben</h2>
+<div class="outline-text-2" id="text-orgcf98bd7">
 <p>
 In meinem Topic Index zum TeX Catalogue gab es bis 2017 <a href="http://dante.ctan.org/tex-archive/obsolete/help/Catalogue/bytopic.html#humanities">eine Übersicht</a>
 über einschlägige Pakete auf CTAN für die Geisteswissenschaftlen
@@ -369,9 +372,9 @@ Mannheim, 2015. Parallel veröffentlicht in: ABI-Technik, 4/2015,
 </div>
 </div>
 
-<div id="outline-container-orgbdbdbc3" class="outline-2">
-<h2 id="orgbdbdbc3">Literatur</h2>
-<div class="outline-text-2" id="text-orgbdbdbc3">
+<div id="outline-container-orgbd4789b" class="outline-2">
+<h2 id="orgbd4789b">Literatur</h2>
+<div class="outline-text-2" id="text-orgbd4789b">
 <p>
 Einen Überblick über die für <i>TeX&nbsp;&amp; Friends</i> im allerweitesten
 Sinne relevante Literatur erhält man im <i><a href="http://ftp.math.utah.edu/pub/tex/bib/index-table.html">TeX User Group bibliography
@@ -488,9 +491,9 @@ CervanTeX (2001–2007)</li>
 </div>
 </div>
 
-<div id="outline-container-org9999560" class="outline-2">
-<h2 id="org9999560">Diskussion und Neuigkeiten rund um TeX und LaTeX</h2>
-<div class="outline-text-2" id="text-org9999560">
+<div id="outline-container-org78823e3" class="outline-2">
+<h2 id="org78823e3">Diskussion und Neuigkeiten rund um TeX und LaTeX</h2>
+<div class="outline-text-2" id="text-org78823e3">
 <p>
 Wie bei jedem freien Softwareprojekt gibt es auch bei TeX eine
 Gemeinde von Entwicklern und Benutzern, die sich online zusammenfinden
@@ -562,18 +565,18 @@ kann man auf der <a href="https://www.dante.de/veranstaltungen/">Website von DAN
 natürlich auch auf den Seiten der anderen User Groups erfahren.
 Außerdem gibt oder gab es an vielen Orten <a href="https://www.dante.de/dante-e-v/stammtische/">Stammtische</a>. Eine neuere
 Veranstaltungsreihe online ist die <i><a href="https://texhour.github.io/">TeX&nbsp;Hour</a></i> jeweils zu einem
-bestimmten Thema, die von Jonathan Fine im Wochentakt auf Zoom
-organisiert wird; die Aufzeichnungen können später in <a href="https://www.youtube.com/@texhour">seinem
-YouTube-Kanal</a> betrachtet werden. Ähnlich sind die <i>Exposées
+bestimmten Thema, die von Jonathan Fine seit Dezember&nbsp;2020 im
+Wochentakt auf Zoom organisiert wird; die Aufzeichnungen können später
+in <a href="https://www.youtube.com/@texhour">seinem YouTube-Kanal</a> betrachtet werden. Ähnlich sind die <i>Exposées
 mensuels</i> der Association GUTenberg, die es ebenfalls <a href="https://www.youtube.com/@associationgutenberg5336">auf YouTube</a> zu
 sehen gibt.
 </p>
 </div>
 </div>
 
-<div id="outline-container-orgac06a92" class="outline-2">
-<h2 id="orgac06a92">Alternativen zu LaTeX</h2>
-<div class="outline-text-2" id="text-orgac06a92">
+<div id="outline-container-orga304606" class="outline-2">
+<h2 id="orga304606">Alternativen zu LaTeX</h2>
+<div class="outline-text-2" id="text-orga304606">
 <p>
 Wer seine Drucksachen mit LaTeX nur setzen, aber nicht auch in LaTeX
 schreiben möchte, hat genaugenommen eine gute Handvoll Möglichkeiten.
@@ -616,10 +619,10 @@ Konverter zwischen den vielen Format-Welten.
 </p>
 
 <p>
-In diesen Fällen steht LaTeX als bloßer Setzer nicht mehr am Anfang,
-sondern am Ende einer Kette. Aber dort braucht man dann eben auch
-weiterhin gute LaTeX-Kenntnisse, damit aus dem Manuskript ein schönes
-und brauchbares PDF für Preprint wird.
+In diesen Fällen steht LaTeX nicht mehr als Format am Anfang, sondern
+als bloßer Setzer am Ende einer Kette. Aber dort braucht man dann eben
+auch weiterhin gute LaTeX-Kenntnisse, damit aus dem Manuskript ein
+schönes und brauchbares PDF für Preprint wird.
 </p>
 
 <hr />
