@@ -1,3 +1,3 @@
-This is a text I wrote as an initial overview of TeX and Friends for absolute beginners who want to get started with a bit of background. This is not a step-by-step introduction to TeX, but rather a signpost giving advice on how to find and use the relevant resources that are already there. It replaced the simple unordered list of resources on TeX I had published on my personal website before. The narrative used herein refers to the concept applied in my classes for TeX novices at the Fernuniversität in Hagen office at Frankfurt am Main held in 2014 and 2015.
+This is a text I wrote as an overview of TeX and Friends for absolute beginners who want to get started with a bit of background. This is not a step-by-step introduction to TeX, but rather a signpost giving advice on how to find and use the relevant resources that are already there. It replaced the simple unordered list of resources on TeX I had published on my personal website before. The narrative used herein draws on the concept applied in my classes for TeX novices at the Fernuniversität in Hagen office at Frankfurt am Main held in 2014 and 2015.
 
-I keep improving on this guide. At first, I provided a raw XHTML version that was identical to the one you will find on my personal website. In September 2023, I switched to Org-Mode.
+I keep improving on this guide. At first, I provided a raw XHTML version that was identical to the one you would find on my personal website. In September 2023, I switched to Org-Mode, providing an HTML export.
