@@ -1,3 +1,15 @@
+2023-12-04  Juergen Fenn  <jfenn@gmx.net>
+
+	* l2intro.org: add French FAQ GUTenberg
+
+2023-11-20  Juergen Fenn  <jfenn@gmx.net>
+
+	* readme.org: edited readme
+
+2023-11-15  Juergen Fenn  <jfenn@gmx.net>
+
+	* l2intro.org: add more on the TeX Hour and some minor improvements
+
 2023-11-13  Juergen Fenn  <jfenn@gmx.net>
 
 	* l2intro.org: add Borkowski, TUGboat 39 (2018), No. 1, pp. 30--36
